rename chrome to src, start adding notification support.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="link" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">
           <strong>Chrome Store</strong>
         </a>
-        <a class="book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/chrome/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+        <a class="book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/src/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
           <strong>Bookmarklet</strong>
         </a>
       </div>
