Update icon locations.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>turnStyles | for turntable.fm</title>
-    <link rel="icon" href="chrome/images/icon48.png">
+    <link rel="icon" href="src/images/icon48.png">
     <style type="text/css">
       body {
         color: #eaeaea;
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="main">
-      <img src="chrome/images/icon.png" alt="turnStyles">
+      <img src="src/images/icon.png" alt="turnStyles">
       <h1>turnStyles | for turntable.fm</h1>
       <div class="links">
         <a class="link" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">
