--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       }
       .link {
         color: gold;
+        font-weight: bold;
       }
     </style>
   </head>
@@ -37,10 +38,10 @@
       <h1>turnStyles | for turntable.fm</h1>
       <div class="links">
         <a class="link" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">
-          <strong>Chrome Store</strong>
+          Chrome Store
         </a>
         <a class="book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/src/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-          <strong>Bookmarklet</strong>
+          Bookmarklet
         </a>
       </div>
       <strong>Install, or Drag The Bookmarklet Link To Your Bookmarks Bar</strong>
