Update paths from dist to build.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a class="link" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">
           Chrome Store
         </a>
-        <a class="book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/dist/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+        <a class="book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/build/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
           Bookmarklet
         </a>
       </div>
