Add discord links to website.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         </a>
         <br>
         <img src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles?color=palegreen&label=Version&logo=javascript&logoColor=white&style=for-the-badge" />
+        <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
+          <img src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20dev%20discord&logo=discord&logoColor=white&style=for-the-badge">
+        </a>
       </p>
       <p>
         <a class="link beta" href="javascript:(function (){let b=document.createElement('script');b.textContent='window.tsBase=\'https://etc.pixelcrisis.co/turnstyles/build\'';b.type='text/javascript';document.body.appendChild(b);let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/turnstyles/build/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
@@ -91,6 +94,9 @@
         </a>
         <br>
         <img src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles/dev?color=lightsalmon&label=Version&logo=javascript&logoColor=white&style=for-the-badge">
+        <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
+          <img src="https://img.shields.io/discord/595791360477626380?color=lightsalmon&label=%20beta%20discord&logo=discord&logoColor=white&style=for-the-badge">
+        </a>
       </p>
       <p>
         <strong><em>Drag The Bookmarklet Links To Your Bookmarks Bar</em></strong>
