Add firefox addon info to website.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,19 @@
         </a>
       </p>
       <p>
-        <a class="link fire" href="#">
+        <a class="link fire" href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/">
           As A Firefox Addon
         </a>
         <br>
-        <strong><em>Coming Soon!</em></strong>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/stars/turnstyles-for-turntable-fm?color=lightskyblue&label=Rating&logo=firefox&logoColor=white&style=for-the-badge">
+        </a>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/users/turnstyles-for-turntable-fm?color=lightskyblue&label=Users&logo=firefox&logoColor=white&style=for-the-badge">
+        </a>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/v/turnstyles-for-turntable-fm?color=lightskyblue&label=Version&logo=firefox&logoColor=white&style=for-the-badge">
+        </a>
       </p>
       <p>
         <a class="link book" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/build/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
