Change label from dev to support.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <br>
         <img src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles?color=palegreen&label=Version&logo=javascript&logoColor=white&style=for-the-badge" />
         <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
-          <img src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20dev%20discord&logo=discord&logoColor=white&style=for-the-badge">
+          <img src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20support%20discord&logo=discord&logoColor=white&style=for-the-badge">
         </a>
       </p>
       <p>
