--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <br>
       <img
         src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles/dev?color=lightsalmon&label=Version&logo=javascript&logoColor=white&style=for-the-badge">
-      <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
+      <a href="https://discord.gg/wqmAVvgSbE" target="_blank">
         <img
           src="https://img.shields.io/discord/595791360477626380?color=lightsalmon&label=%20beta%20discord&logo=discord&logoColor=white&style=for-the-badge">
       </a>
