--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </p>
     <p>
       <a class="link book"
-        href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/build/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+        href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/browser.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
         Stable Bookmarklet
       </a>
       <br>
@@ -121,8 +121,8 @@
     </p>
     <p>
       <a class="link beta"
-        href="javascript:(function (){let b=document.createElement('script');b.textContent='window.tsBase=\'https://etc.pixelcrisis.co/turnstyles/build\'';b.type='text/javascript';document.body.appendChild(b);let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/turnstyles/build/turnStyles.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-        Beta Bookmarklet
+        href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/beta.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+        Stable Bookmarklet
       </a>
       <br>
       <img
