--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>turnStyles | for turntable.fm</title>
-  <link rel="icon" href="src/images/icon48.png">
+  <link rel="icon" href="build/images/icon48.png">
   <style type="text/css">
     body {
       color: #eaeaea;
@@ -10,13 +10,8 @@
       font-family: 'Arial', sans-serif;
     }
 
-    a {
-      color: gold;
-      text-decoration: none;
-    }
-
-    p {
-      margin: 30px 0;
+    .logo {
+      max-width: 100px;
     }
 
     .main {
@@ -24,22 +19,41 @@
       text-align: center;
     }
 
-    .logo {
-      max-width: 100px;
+    .cloud {
+      width: 100%;
+      max-width: 900px;
+      margin: 0 auto 25px;
+      text-align: center;
+      font-weight: bolder;
+      font-size: 20px;
     }
 
-    .list {
-      margin: 10px 0 30px;
+    .cloud > span {
+      margin: 0 5px;
+      display: inline-block;
+    }
+
+    .install {
+      width: 100%;
+      max-width: 900px;
+      margin: 0 auto 20px;
+      display: flex;
+      align-content: center;
+    }
+
+    .install > div {
+      flex-basis: 33%;
     }
 
     .link {
-      margin: 5px;
+      margin: 5px 0;
       color: #1a1a1a;
       font-size: 0.9em;
+      display: inline-block;
       background: gold;
       font-weight: bold;
       padding: 7px 20px;
-      display: inline-block;
+      text-decoration: none;
       text-transform: uppercase;
     }
 
@@ -59,8 +73,9 @@
       background: lightsalmon;
     }
 
-    p img {
-      margin: 5px;
+    .install img {
+      margin: 10px auto;
+      display: block;
     }
   </style>
 </head>
@@ -69,110 +84,62 @@
   <div class="main">
     <img class="logo" src="build/images/icon.png" alt="turnStyles">
     <h1>turnStyles | for turntable.fm</h1>
-    <p>
-      <a class="link"
-        href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">
-        On The Chrome Store
-      </a>
-      <br>
-      <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-        <img
-          src="https://img.shields.io/chrome-web-store/stars/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Rating&logo=google-chrome&logoColor=white&style=for-the-badge" />
-      </a>
-      <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-        <img
-          src="https://img.shields.io/chrome-web-store/users/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Users&logo=google-chrome&logoColor=white&style=for-the-badge" />
-      </a>
-      <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-        <img
-          src="https://img.shields.io/chrome-web-store/v/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Version&logo=google-chrome&logoColor=white&style=for-the-badge" />
-      </a>
-    </p>
-    <p>
-      <a class="link fire" href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/">
-        As A Firefox Addon
-      </a>
-      <br>
-      <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-        <img
-          src="https://img.shields.io/amo/stars/turnstyles-for-turntable-fm?color=lightskyblue&label=Rating&logo=firefox&logoColor=white&style=for-the-badge">
-      </a>
-      <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-        <img
-          src="https://img.shields.io/amo/users/turnstyles-for-turntable-fm?color=lightskyblue&label=Users&logo=firefox&logoColor=white&style=for-the-badge">
-      </a>
-      <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-        <img
-          src="https://img.shields.io/amo/v/turnstyles-for-turntable-fm?color=lightskyblue&label=Version&logo=firefox&logoColor=white&style=for-the-badge">
-      </a>
-    </p>
-    <p>
-      <a class="link book"
-        href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/browser.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-        Stable Bookmarklet
-      </a>
-      <br>
-      <img
-        src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles?color=palegreen&label=Version&logo=javascript&logoColor=white&style=for-the-badge" />
-      <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
-        <img
-          src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20support%20discord&logo=discord&logoColor=white&style=for-the-badge">
-      </a>
-    </p>
-    <p>
-      <a class="link beta"
-        href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/beta.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-        Stable Bookmarklet
-      </a>
-      <br>
-      <img
-        src="https://img.shields.io/github/package-json/v/pixelcrisis/turnstyles/dev?color=lightsalmon&label=Version&logo=javascript&logoColor=white&style=for-the-badge">
-      <a href="https://discord.gg/wqmAVvgSbE" target="_blank">
-        <img
-          src="https://img.shields.io/discord/595791360477626380?color=lightsalmon&label=%20beta%20discord&logo=discord&logoColor=white&style=for-the-badge">
-      </a>
-    </p>
-    <p>
-      <strong><em>Drag The Bookmarklet Links To Your Bookmarks Bar</em></strong>
-    </p>
-    <p>
-      <h2>Features</h2>
-      <strong>Autobop:</strong>
-      Auto Awesome new songs
-      <br>
-      <strong>Show Volume:</strong>
-      Always visible volume slider
-      <br>
-      <strong>Temp Mute:</strong>
-      Mute only until next song
-      <br>
-      <strong>Themes:</strong>
-      Dark Mode, Night Mode, Cosmic, Midnight
-      <br>
-      <strong>Styles</strong>
-      Replace the Gold!
-      <br>
-      <strong>Desktop Notifications:</strong>
-      New Songs, Stats, Mentions, PMs!
-      <br>
-      <strong>Chat Notifications:</strong>
-      User leave/join, Snags, Song Stats, Dropped DJ stats
-      <br>
-      <strong>Custom Chat Notifications:</strong>
-      Get notified on your chosen keywords
-      <br>
-      <strong>Auto AFK Mentions:</strong>
-      Let everyone know you're AFK when mentioned
-      <br>
-      <strong>Auto DJ Queue:</strong>
-      Jump on the decks with the next available DJ spot or
-      <br>set a custom mention trigger to add yourself when you're
-      mentioned
-      <br>
-      <strong>Custom CSS:</strong>
-      Add your own custom CSS to turntable.fm
-        <br>
-    </p>
+
+    <div class="cloud">
+      <span>Auto Awesome</span> -
+      <span>Temporary Mute</span> -
+      <span>Themes & Styles</span> -
+      <span>Desktop Notifications</span> -
+      <span>Stats & Room Info</span> -
+      <span>AFK Status</span> -
+      <span>Auto DJ Queue</span> -
+      <span>Custom CSS</span> -
+      <span>Custom Mentions</span> -
+      <span>And More!</span>
+    </div>
+
+    <div class="install">
+      <div>
+        <a class="link" target="_blank" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">Get It On Chrome</a>
+        <br />
+        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
+          <img src="https://img.shields.io/chrome-web-store/v/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Version&logo=google-chrome&logoColor=white&style=for-the-badge" />
+        </a>
+        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
+          <img src="https://img.shields.io/chrome-web-store/stars/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Rating&logo=google-chrome&logoColor=white&style=for-the-badge" />
+        </a>
+        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
+          <img src="https://img.shields.io/chrome-web-store/users/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Users&logo=google-chrome&logoColor=white&style=for-the-badge" />
+        </a>
+      </div>
+      <div>
+        <a class="link book" target="_blank" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/browser.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">Stable Bookmarklet</a>
+        <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
+          <img src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20support%20discord&logo=discord&logoColor=white&style=for-the-badge"/>
+        </a>
+
+        <a class="link beta" target="_bank" href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/nightly.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">Beta Bookmarklet</a>
+        <a href="https://discord.gg/wqmAVvgSbE" target="_blank">
+          <img src="https://img.shields.io/discord/595791360477626380?color=lightsalmon&label=%20beta%20discord&logo=discord&logoColor=white&style=for-the-badge">
+        </a>
+      </div>
+      <div>
+        <a class="link fire" target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/">Get It On Firefox</a>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/v/turnstyles-for-turntable-fm?color=lightskyblue&label=Version&logo=firefox&logoColor=white&style=for-the-badge" />
+        </a>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/stars/turnstyles-for-turntable-fm?color=lightskyblue&label=Rating&logo=firefox&logoColor=white&style=for-the-badge" />
+        </a>
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/users/turnstyles-for-turntable-fm?color=lightskyblue&label=Users&logo=firefox&logoColor=white&style=for-the-badge" />
+        </a>
+      </div>
+    </div>
+
+    <div class="cloud">
+      <span>Drag the Bookmarklet links to your Bookmarks Bar!</span>
+    </div>
 
   </div>
 </body>
