--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
       background: #1a1a1a;
       font-family: 'Arial', sans-serif;
     }
-
+    h5 { margin: 0; }
     .logo {
-      max-width: 100px;
+      width: 150px;
+      margin-bottom: -30px;
     }
-
-    .main {
-      margin-top: 30px;
-      text-align: center;
-    }
-
-    .cloud {
-      width: 100%;
-      max-width: 900px;
-      margin: 0 auto 25px;
-      text-align: center;
-      font-weight: bolder;
-      font-size: 20px;
-    }
-
+    .main { margin-top: 30px; }
+    .cloud { text-align: center; }
     .cloud > span {
       margin: 0 5px;
       display: inline-block;
     }
-
+    .block > span { 
+      display: block;
+      margin-bottom: 10px; 
+    }
+    .cloud,
+    .block {
+      width: 100%;
+      max-width: 700px;
+      font-size: 20px;
+      font-weight: bolder;
+      margin: 0 auto 25px;
+    }
     .install {
       width: 100%;
       max-width: 900px;
@@ -40,7 +39,6 @@
       display: flex;
       align-content: center;
     }
-
     .install > div {
       flex-basis: 33%;
     }
@@ -82,63 +80,69 @@
 
 <body>
   <div class="main">
-    <img class="logo" src="build/images/icon.png" alt="turnStyles">
-    <h1>turnStyles | for turntable.fm</h1>
+    <div class="cloud">
+      <img class="logo" src="build/images/icon.png" alt="turnStyles">
+      <h1>turnStyles <small><em>for turntable.fm</em></small></h1>
+    </div>
 
     <div class="cloud">
       <span>Auto Awesome</span> -
       <span>Temporary Mute</span> -
-      <span>Themes & Styles</span> -
+      <span>Themes & Styles</span><br>
       <span>Desktop Notifications</span> -
       <span>Stats & Room Info</span> -
-      <span>AFK Status</span> -
+      <span>AFK Status</span><br>
       <span>Auto DJ Queue</span> -
       <span>Custom CSS</span> -
-      <span>Custom Mentions</span> -
+      <span>Custom Mentions</span><br>
+      <span>Twitch Emotes</span> -
+      <span>BTTV Emotes</span> -
       <span>And More!</span>
     </div>
 
-    <div class="install">
-      <div>
-        <a class="link" target="_blank" href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme">Get It On Chrome</a>
-        <br />
-        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-          <img src="https://img.shields.io/chrome-web-store/v/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Version&logo=google-chrome&logoColor=white&style=for-the-badge" />
+    <div class="block" style="margin-top: 50px">
+      <h3>How To Install</h3>
+      <span><!-- Chrome Store -->
+        <a href="https://chrome.google.com/webstore/detail/turntable-tweaks/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
+          <img src="https://img.shields.io/chrome-web-store/v/pmlkackfnbbnjfejpddpakallilkbdme?style=for-the-badge&label=Chrome%20Extension&color=gold">
         </a>
-        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-          <img src="https://img.shields.io/chrome-web-store/stars/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Rating&logo=google-chrome&logoColor=white&style=for-the-badge" />
+        <img src="https://img.shields.io/chrome-web-store/users/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&style=for-the-badge">
+        <img src="https://img.shields.io/chrome-web-store/rating/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&style=for-the-badge">
+        <img src="https://img.shields.io/chrome-web-store/rating-count/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&style=for-the-badge">
+      </span>
+        
+      <span><!-- Firefox Addon -->
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
+          <img src="https://img.shields.io/amo/v/turnstyles-for-turntable-fm?color=lightskyblue&style=for-the-badge">
         </a>
-        <a href="https://chrome.google.com/webstore/detail/pmlkackfnbbnjfejpddpakallilkbdme" target="_blank">
-          <img src="https://img.shields.io/chrome-web-store/users/pmlkackfnbbnjfejpddpakallilkbdme?color=gold&label=Users&logo=google-chrome&logoColor=white&style=for-the-badge" />
+        <img src="https://img.shields.io/amo/users/turnstyles-for-turntable-fm?color=lightskyblue&style=for-the-badge">
+        <img src="https://img.shields.io/amo/rating/turnstyles-for-turntable-fm?color=lightskyblue&style=for-the-badge">
+      </span>
+
+      <span><!-- Bookmarklets -->
+        <a href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/build/book.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+          <img src="https://img.shields.io/badge/dynamic/json?color=palegreen&label=Bookmarklet&query=version&url=https%3A%2F%2Fts.pixelcrisis.co%2Fpackage.json&style=for-the-badge" alt="+turnStyles">
         </a>
-      </div>
-      <div>
-        <a class="link book" target="_blank" href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/browser.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">Stable Bookmarklet</a>
+        <a href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/build/beta.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
+          <img src="https://img.shields.io/badge/dynamic/json?color=lightsalmon&label=Beta Bookmarklet&query=version&url=https%3A%2F%2Fetc.pixelcrisis.co%2Fpackage.json&style=for-the-badge" alt="+turnStyles Beta">
+        </a>
+      </span>
+      <h5>Use the links to install for Chrome/Opera/Firefox</h5>
+      <h5>Or Drag The Bookmarklet Links To Your Bookmarks Bar</h5>
+    </div>
+
+    <div class="block">
+      <h3>Need More?</h3>
+      <span>
         <a href="https://discord.gg/ZprHwNUw8y" target="_blank">
           <img src="https://img.shields.io/discord/595791360477626380?color=palegreen&label=%20support%20discord&logo=discord&logoColor=white&style=for-the-badge"/>
         </a>
-
-        <a class="link beta" target="_bank" href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/nightly.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">Beta Bookmarklet</a>
         <a href="https://discord.gg/wqmAVvgSbE" target="_blank">
           <img src="https://img.shields.io/discord/595791360477626380?color=lightsalmon&label=%20beta%20discord&logo=discord&logoColor=white&style=for-the-badge">
-        </a>
-      </div>
-      <div>
-        <a class="link fire" target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/">Get It On Firefox</a>
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-          <img src="https://img.shields.io/amo/v/turnstyles-for-turntable-fm?color=lightskyblue&label=Version&logo=firefox&logoColor=white&style=for-the-badge" />
-        </a>
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-          <img src="https://img.shields.io/amo/stars/turnstyles-for-turntable-fm?color=lightskyblue&label=Rating&logo=firefox&logoColor=white&style=for-the-badge" />
-        </a>
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/turnstyles-for-turntable-fm/" target="_blank">
-          <img src="https://img.shields.io/amo/users/turnstyles-for-turntable-fm?color=lightskyblue&label=Users&logo=firefox&logoColor=white&style=for-the-badge" />
-        </a>
-      </div>
-    </div>
-
-    <div class="cloud">
-      <span>Drag the Bookmarklet links to your Bookmarks Bar!</span>
+        </a>  
+      </span>
+      <h5>Join the Support Discord! (They're the same discord!)</h5>
+      <h5><em>You can also find me in the official turntable.fm discord!</em></h5>
     </div>
 
   </div>
