Add v prefix to bookmarklet versions.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
       <span><!-- Bookmarklets -->
         <a href="javascript:(function (){let s=document.createElement('script');s.src='https://ts.pixelcrisis.co/build/book.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-          <img src="https://img.shields.io/badge/dynamic/json?color=palegreen&label=Bookmarklet&query=version&url=https%3A%2F%2Fts.pixelcrisis.co%2Fpackage.json&style=for-the-badge" alt="+turnStyles">
+          <img src="https://img.shields.io/badge/dynamic/json?color=palegreen&label=Bookmarklet&query=version&url=https%3A%2F%2Fts.pixelcrisis.co%2Fpackage.json&style=for-the-badge&prefix=V" alt="+turnStyles">
         </a>
         <a href="javascript:(function (){let s=document.createElement('script');s.src='https://etc.pixelcrisis.co/build/beta.js?'+Math.random();s.type='text/javascript';document.body.appendChild(s)}());">
-          <img src="https://img.shields.io/badge/dynamic/json?color=lightsalmon&label=Beta Bookmarklet&query=version&url=https%3A%2F%2Fetc.pixelcrisis.co%2Fpackage.json&style=for-the-badge" alt="+turnStyles Beta">
+          <img src="https://img.shields.io/badge/dynamic/json?color=lightsalmon&label=Beta Bookmarklet&query=version&url=https%3A%2F%2Fetc.pixelcrisis.co%2Fpackage.json&style=for-the-badge&prefix=V" alt="+turnStyles Beta">
         </a>
       </span>
       <h5>Use the links to install for Chrome / Opera / Firefox</h5>
